geo toast, attempt prevent the scroll on firefox mobile after clicking next btn on planmap

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
 body {
   font-family: "Roboto", sans-serif;
   /* max-height: 100vh; */
+  overflow-y: hidden;
 }
 
 .App {
